objects/SPM_Account_Program__c.object
<CustomObject>
    <description>Programs</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Program</description>
        <inlineHelpText>Account Program</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Account_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Sales__c</fullName>
        <description>Last 4 Quarters Revenue (based on SBI)</description>
        <inlineHelpText>Last 4 Quarters Revenue (based on SBI)</inlineHelpText>
        <label>Actual Sales ($)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MVendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MVendor</label>
        <referenceTo>SPM_PVendor_MVendor__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Merchant User</description>
        <inlineHelpText>Merchant User</inlineHelpText>
        <label>Merchant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBI_Score_Last_Quarter__c</fullName>
        <description>Last Quarter SBI Score</description>
        <inlineHelpText>Last Quarter SBI Score</inlineHelpText>
        <label>SBI Score - Last Quarter</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Program</description>
        <inlineHelpText>Service Program</inlineHelpText>
        <label>Service Program</label>
        <referenceTo>HS_ServiceProgram__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Program ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <recordTypes>
        <fullName>MVendor_Program</fullName>
        <active>true</active>
        <label>MVendor Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>PVendor_Program</fullName>
        <active>true</active>
        <label>PVendor Program</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>